--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ Today's Date: November 12, 2021
   	<div class="footeritem footeritem-3"><div class="footeritem-inner"><a href="mailto:Info@joylifedrycleaners.com">Info@joylifedrycleaners.com</a></div></div>
     <div class="footeritem footeritem-4"><div class="footeritem-inner">
       <ul class="socialsico">
-          <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-           <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-             <a href="#"><i class="fa fa-pinterest-square" aria-hidden="true"></i></a>
+           <a href="#"><img src="images/Facebook.jpg"</a>
+		   <a href="#"><img src="images/Twiter.jpg"</a>
+		    <a href="#"><img src="images/Instagram.jpg"</a>
+         
         </ul>
     </div></div>
   	<br clear="all">
