--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@ Today's Date: November 12, 2021
     <div class="footeritem footeritem-4"><div class="footeritem-inner">
       <ul class="socialsico">
           <li>
-          <a href="https://www.facebook.com/" target="_blank"><img alt="" src="images/Facebook.png"></a>
+          <a href="https://www.facebook.com/" target="_blank"><img alt="" src="images/facebook.png"></a>
           </li>
           <li>
 		   <a href="https://www.twitter.com/" target="_blank"><img alt="" src="images/twitter.png"></a>
 		   </li>
 		   <li>
-		    <a href="https://www.instagram.com/" target="_blank"><img alt="" src="images/Instagram.png"></a>
+		    <a href="https://www.instagram.com/" target="_blank"><img alt="" src="images/instagram.png"></a>
 		    </li>
          
         </ul>
