--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@ Today's Date: November 12, 2021
 		   <a href="https://www.twitter.com/" target="_blank"><img alt="" src="images/twitter.png"></a>
 		   </li>
 		   <li>
-		    <a href="https://www.instagram.com/" target="_blank"><img alt="" src="images/Instagram.png"></a>
+		    <a href="https://www.instagram.com/" target="_blank"><img alt="" src="images/instagram.png"></a>
 		    </li>
          
         </ul>
